sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	do {	for (i<-1 to getNombreValeurs()-2)
		if (plusPetit(i:Int, i+1:Int)) {
			echange (i,i+1)}
		}
		while(plusPetit(i,i+1))
	}

